MODDICONV-179 Update endpoints for profiles creation to respect UUID from the request body